--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -1,5 +1,9 @@
 <%= form_for @artist do |f| %>
     <div class="input-field col s6 white">
+        <%= f.label :img, 'Image'%>
+        <%= f.text_field :img%>
+    </div>
+    <div class="input-field col s6 white">
         <%= f.label :name, 'Name'%>
         <%= f.text_field :name%>
     </div>
